# pysat

./: .gitmodules  CMakeLists.txt  docs
c++-srcs/: pysat.cc
sphinx-src/source/: conf.py  how_to_build.rst
sphinx-src/source/classes/: SatSolver.rst  classes.rst
